--- a/templates/receipt.html
+++ b/templates/receipt.html
@@ -120,8 +120,8 @@
     <div class="receipt-container">
         <div class="header">
             <img src="/static/logo.png" alt="School Logo" class="logo"> <!-- Optional logo -->
-            <h1>Your School Name</h1>
-            <p>1234 School Lane, Town, Country<br>Tel: +254 700 000000 | Email: info@stpaulrongo.com</p>
+            <h1>ST PAUL RONGO DAY SECONDARY SCHOOL</h1>
+            <p>P.O.BOX 233,RONGO-40404<br>Tel: +254 700 000000 | Email: info@stpaulrongo.com</p>
         </div>
 
         <h2 style="text-align:center; margin-top: 10px; color:#2c3e50;">school fees payment</h2>
