--- a/templates/receipt.html
+++ b/templates/receipt.html
@@ -119,7 +119,7 @@
 
     <div class="receipt-container">
         <div class="header">
-            <img src="/static/logo.png" alt="School Logo" class="logo"> <!-- Optional logo -->
+            <img src="/static/images/LOGO.jpg" alt="School Logo" class="logo"> <!-- Optional logo -->
             <h1>ST PAUL RONGO DAY SECONDARY SCHOOL</h1>
             <p>P.O.BOX 233,RONGO-40404<br>Tel: +254 700 000000 | Email:  rongomixeddayss15@gmail.com</p>
         </div>
