--- a/templates/payments.html
+++ b/templates/payments.html
@@ -87,7 +87,12 @@
                 </td>
 
               </tr>
-              
+                <div style="text-align: right; margin-bottom: 20px;">
+                   <a href="{{ url_for('print_payments') }}" target="_blank">
+                        <button>🖨️ Printable View</button>
+                   </a>
+                 </div>
+
 
             {% endfor %}
           </tbody>
