--- a/templates/outstanding_print.html
+++ b/templates/outstanding_print.html
@@ -48,7 +48,7 @@
 
     <div class="header">
         <!-- Uncomment and replace src with your logo path if available -->
-        <!-- <img src="{{ url_for('static', filename='logo.png') }}" alt="School Logo"> -->
+        <img src="/static/images/LOGO.jpg" alt="School Logo" class="logo">
         <h2>
             {% if outstanding|length == 1 %}
                 Outstanding Balance Receipt – {{ outstanding[0].name }}
